updated to next version

--- a/Software/WildFiFirmware/platformio.ini
+++ b/Software/WildFiFirmware/platformio.ini
@@ -5,7 +5,7 @@
 
 [platformio]
 
-src_dir = testREV6/rev6wifiTransmissionTest                     ; select application
+src_dir = firmware/hdLoggerREV6                     ; select application
 lib_dir = src
 
 [env:pico32]
